db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: alfiabby/db:latest
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongodb
          mountPath: /data/db:/docker-entrypoint-initdb.d/
      volumes:
        - name: mongodb
          persistentVolumeClaim:
            claimName: mongodb
